<resources>
    <string name="app_name">MaterialDesignDemo</string>
    <string name="background_picture">Background Picture</string>
    <string name="home">Home</string>
    <string name="my_snackbar">My Snackbar</string>
    <string name="persistent_bottomsheet">Persistent Bottomsheet</string>
    <string name="tabs">Tabs</string>
    <string name="wrong_case_selection">wrong case selection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="snackbar_background">Snackbar Background</string>
    <string name="have_a_bite">Have a Bite!!!</string>
    <string name="model_bottomsheet">Model BottomSheet</string>
</resources>
